[gd_scene load_steps=4 format=3 uid="uid://dgsdo5nldx713"]

[ext_resource type="Script" path="res://Ability.gd" id="1_baoy6"]
[ext_resource type="Theme" uid="uid://b21veaaftvef5" path="res://cardstyle.tres" id="2_vad8u"]
[ext_resource type="Texture2D" uid="uid://dpqbawr5d5r0u" path="res://textures/avatar.png" id="4_2k5ub"]

[node name="AbilityInstance" type="Control"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 164.0
focus_mode = 2
mouse_filter = 1
script = ExtResource("1_baoy6")

[node name="Panel" type="PanelContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(150, 164)
layout_mode = 1
anchors_preset = -1
offset_right = 150.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vad8u")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Parts" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Name" type="Label" parent="Panel/Margin/Parts"]
layout_mode = 2
theme_override_font_sizes/font_size = 8

[node name="Picture" type="TextureRect" parent="Panel/Margin/Parts"]
layout_mode = 2
texture = ExtResource("4_2k5ub")
expand_mode = 5

[node name="Scroll" type="ScrollContainer" parent="Panel/Margin/Parts"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3

[node name="Abilities" type="VBoxContainer" parent="Panel/Margin/Parts/Scroll"]
layout_mode = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
